Revert "Add reset to fix whitespace between border and outline on Safari for Mac"
This reverts commit 51bd3b643ae9ae557dd2ccfe60694c59e10e4b7b.

--- a/packages/css/src/components/form-error-list/form-error-list.scss
+++ b/packages/css/src/components/form-error-list/form-error-list.scss
@@ -1,6 +1,5 @@
 .ams-form-error-list {
   outline-offset: var(--ams-form-error-list-outline-offset);
-  outline-width: medium; /* Override initial value of `thick` on Safari for Mac */
 
   // In Chromium browsers, the outline overlaps with the border in this component.
   // We're not sure why, but to fix this we double the offset for Chromium browsers here.
